tests/machine/x/scala/group_by_conditional_sum.error
exit status 1
/workspace/mochi/tests/machine/x/scala/group_by_conditional_sum.scala:19: error: value key is not a member of (String, List[group_by_conditional_sum.Item])
  val result = (((for { i <- items } yield (i.cat, (i))).groupBy(_._1).map{ case(k,list) => (k, list.map(_._2)) }.toList).sortBy(g => g.key)).map{ case(gKey,gItems) => { val g = (gKey, gItems); Result(cat = g._1, share = (for { x <- g._2 } yield if (_truthy(x.flag)) x.`val` else 0).sum / (for { x <- g._2 } yield x.`val`).sum) } }.toList
                                                                                                                                        ^
/workspace/mochi/tests/machine/x/scala/group_by_conditional_sum.scala:19: error: type mismatch;
 found   : Any
 required: String
  val result = (((for { i <- items } yield (i.cat, (i))).groupBy(_._1).map{ case(k,list) => (k, list.map(_._2)) }.toList).sortBy(g => g.key)).map{ case(gKey,gItems) => { val g = (gKey, gItems); Result(cat = g._1, share = (for { x <- g._2 } yield if (_truthy(x.flag)) x.`val` else 0).sum / (for { x <- g._2 } yield x.`val`).sum) } }.toList
                                                                                                                                                                                                                 ^
/workspace/mochi/tests/machine/x/scala/group_by_conditional_sum.scala:19: error: value map is not a member of Any
  val result = (((for { i <- items } yield (i.cat, (i))).groupBy(_._1).map{ case(k,list) => (k, list.map(_._2)) }.toList).sortBy(g => g.key)).map{ case(gKey,gItems) => { val g = (gKey, gItems); Result(cat = g._1, share = (for { x <- g._2 } yield if (_truthy(x.flag)) x.`val` else 0).sum / (for { x <- g._2 } yield x.`val`).sum) } }.toList
                                                                                                                                                                                                                                           ^
/workspace/mochi/tests/machine/x/scala/group_by_conditional_sum.scala:19: error: value map is not a member of Any
  val result = (((for { i <- items } yield (i.cat, (i))).groupBy(_._1).map{ case(k,list) => (k, list.map(_._2)) }.toList).sortBy(g => g.key)).map{ case(gKey,gItems) => { val g = (gKey, gItems); Result(cat = g._1, share = (for { x <- g._2 } yield if (_truthy(x.flag)) x.`val` else 0).sum / (for { x <- g._2 } yield x.`val`).sum) } }.toList
                                                                                                                                                                                                                                                                                                               ^
four errors found
